--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 *{
     margin: 0;
     padding: 0;
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Proxima Nova', sans-serif;
     box-sizing: border-box;
     font-weight: 600;
 }
