--- a/second.css
+++ b/second.css
@@ -21,30 +21,33 @@ body{
 #header1 {
     width: 100%;
     height: 100vh;
-    background-image: url(images/background.png);
+    background-image: url(images/background2.png);
     background-size: cover;
     background-position: center;
 }
+
 .header-title{
     margin-top: 10%;
-    font-size: 30px;
-    text-align: center;   
-}
-.header-title h1{
-    text-shadow: 2px 2px 5px #000000;
+    font-size: 50px;
 }
 .header-title span{
     color: #dc5b04;
 }
 .header-title p{
-    font-style: italic;
-    font-size: 20px;
+    font-style: normal;
+    font-size: 15px;
 }
 .header-title p span.spgreen{
     color: green;
 }
 .header-title p span.spred{
     color: red;
+}
+nav{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 nav ul li{
     display: inline-block;
