--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@
     border-radius: 3px;
     cursor: pointer;
 }
-.arrow-btn a{
+.arrow-btn a span{
     color: #fff;
     line-height: 39px;
     font-size: 25px;
