--- a/cppjava.css
+++ b/cppjava.css
@@ -5,18 +5,33 @@
     box-sizing: border-box;
     font-weight: 600;
 }
-.btnnew{
+.arrow-btn{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 9;
+}
+.arrow-btn a{
+    height: 39px;
+    width: 37px;
+    text-align: center;
+    background: #dc5b04;
     display: block;
-    margin: 50px auto;
-    width: fit-content;
-    border: 1px solid #dc5b04;
-    padding: 14px 50px;
-    border-radius: 6px;
-    text-decoration: none;
-    color: #fff;
-    background-color: #dc5b04;
+    border-radius: 3px;
     cursor: pointer;
-    font-size: 20px;
+}
+.arrow-btn a i{
+    color: #fff;
+    line-height: 39px;
+    font-size: 25px;
+
+}
+#headercpp{
+    width: 100%;
+    height: 100vh;
+    background-image: url(images/background2.png);
+    background-size: cover;
+    background-position: center;
 }
 html{
     scroll-behavior: smooth;
@@ -25,42 +40,38 @@ body{
     background:  #7f7f7f;
     color: #fff;
 }
-.container1{
+.containercpp{
     padding: 10px 10%;
 }
-.logo1{
-    width: 140px;
-}
-#header1{
-    width: 100%;
-    height: 100vh;
-    background-image: url(images/background2.png);
-    background-size: cover;
-    background-position: center;
-}
-
-.header-title{
-    margin-top: 10%;
+.header-text{
+    margin-top: 5%;
     font-size: 50px;
+    
 }
-.header-title span{
+.header-text h1{
+    text-align: center;
+    
+}
+.spblue {
+    color: blue;
+}
+.sporange{
     color: #dc5b04;
 }
-.header-title p{
-    font-style: normal;
-    font-size: 15px;
-}
-.header-title p span.spgreen{
-    color: green;
-}
-.header-title p span.spred{
-    color: red;
+.header-text p{
+    font-size: 20px;
+    text-align: center;
+    font-family: 'Proxima Nova', sans-serif;
+    font-weight: 500;
 }
 nav{
     display: flex;
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
+}
+.logo{
+    width: 140px;
 }
 nav ul li{
     display: inline-block;
@@ -86,20 +97,28 @@ nav ul li a::after{
 nav ul li a:hover::after{
     width: 100%;
 }
-
-/*----------------mobilescreen---------------*/
+/*----------COPYRIGHTBAR---------------*/
+.copyright{
+    width: 100%;
+    text-align: center;
+    padding: 25px 0;
+    background: #262626;
+    font-weight: 300;
+    margin-top: 20px;
+}
+/*------------MOBILESCREEN DESIGN---------------*/
 nav .fas{
     display: none;
 }
 @media only screen and (max-width: 600px){
-    #header1{
+    #headercpp{
         background-image: url(images/phonebg2.png);
     }
-    .header-title{
+    .header-text{
         margin-top: 50%;
         font-size: 16px;
     }
-    .header-title h1{
+    .header-text h1{
         font-size: 50px;
     }
     nav .fas{
@@ -130,18 +149,6 @@ nav .fas{
     .copyright{
         font-size: 14px;
     }
-    .contact-left{
-        flex-basis: 100%;
-    }
-}
-/*----------COPYRIGHTBAR---------------*/
-.copyright{
-    width: 100%;
-    text-align: center;
-    padding: 25px 0;
-    background: #262626;
-    font-weight: 300;
-    margin-top: 20px;
 }
 /*-------------contact--------*/
 
@@ -171,5 +178,4 @@ nav .fas{
 .social-icons{
     margin-top: 30px;
 }
-
 
