--- a/cppjava.css
+++ b/cppjava.css
@@ -121,6 +121,9 @@ nav .fas{
     .header-text h1{
         font-size: 50px;
     }
+    .containercodes .sub-titlecpp{
+        font-size: 50px;
+    }
     nav .fas{
         display: block;
         font-size: 25px;
@@ -178,4 +181,75 @@ nav .fas{
 .social-icons{
     margin-top: 30px;
 }
+/*-------------codes list--------*/
 
+#codescpp{
+    padding: 50px 0;
+}
+.containercodes{
+    padding: 10px 10%;
+}
+.codes-list{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;   
+}
+.codes{
+    border-radius: 10px;
+    position:relative;
+    overflow: hidden;
+}
+.codes img{
+    width: 100;
+    border-radius: 10px;
+    display: block;
+    transition: transform 0.5s;
+}
+.codelayer{
+    width: 100%;
+    height: 0;
+    background: linear-gradient(rgba(0,0,0,0.6), #dc5b04);
+    border-radius: 10px;
+    position: absolute;
+    left:0;
+    bottom:0;
+    overflow:hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    padding: 0 40px;
+    text-align: center;
+    font-size: 14px;
+    transition: 0.5s;
+}
+.codelayer a{
+    margin-top: 20px;
+    color: #dc5b04;
+    text-decoration: none;
+    font-size: 18px;
+    line-height: 60px;
+    background: #fff;
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    text-align: center;
+}
+.codelayer h3{
+    font-weight: 500;
+    margin-bottom: 20px;
+}
+.containercodes h1{
+    font-family: "Roboto", sans-serif;
+    font-size: 100px;  
+}
+.containercodes h1 span{
+    color: #dc5b04;
+}
+.codes:hover img{
+    transform: scale(1.1);
+}
+.codes:hover .codelayer{
+    height: 100%;
+}
