--- a/second.css
+++ b/second.css
@@ -5,6 +5,27 @@
     box-sizing: border-box;
     font-weight: 600;
 }
+.arrow-btn{
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    z-index: 9;
+}
+.arrow-btn a{
+    height: 39px;
+    width: 37px;
+    text-align: center;
+    background: #dc5b04;
+    display: block;
+    border-radius: 3px;
+    cursor: pointer;
+}
+.arrow-btn a i{
+    color: #fff;
+    line-height: 39px;
+    font-size: 25px;
+
+}
 .btnnew{
     display: block;
     margin: 50px auto;
