--- a/second.css
+++ b/second.css
@@ -26,6 +26,8 @@
     font-size: 25px;
 
 }
+
+/*---------Download Buttons---------------*/
 .btnnew{
     display: block;
     margin: 50px auto;
@@ -39,6 +41,21 @@
     cursor: pointer;
     font-size: 20px;
 }
+.btndoc{
+    display: block;
+    margin: 50px auto;
+    width: fit-content;
+    border: 1px solid #dc5b04;
+    padding: 14px 50px;
+    border-radius: 6px;
+    text-decoration: none;
+    color: #fff;
+    background-color: #dc5b04;
+    cursor: pointer;
+    font-size: 20px;
+    z-index: 1;
+}
+
 html{
     scroll-behavior: smooth;
 }
@@ -108,6 +125,59 @@ nav ul li a:hover::after{
     width: 100%;
 }
 
+/*----------------info container---------------*/
+
+.info-container p{
+    padding: 10px 10%;
+    font-family: 'Proxima Nova', sans-serif; 
+    font-weight: 400;
+    font-size: 20px;
+    margin-bottom: 20px;
+    line-height: 1.5;
+}
+.info-container span {
+    color: #dc5b04;
+    font-family: 'Proxima Nova', sans-serif; 
+    font-weight: 500;
+}
+.info-container p span.spngreen{
+    color: green;
+}
+.info-container p span.spnred{
+    color: red;
+}
+.info-container p span.spnblue{
+    color: blue;
+}
+
+/*----------------image slider---------------*/
+.container-slide{
+    width: 100%;
+    height: 100vh;
+    background: #222;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.swiper{
+    width:80%;
+    height: fit-content;
+}
+
+.swiper-slide img{
+    width: 100%;
+}
+
+.swiper .swiper-button-prev, .swiper .swiper-button-next{
+    color: #dc5b04;
+}
+.swiper .swiper-pagination-bullet-active{
+background: #dc5b04;
+}
+
+
+
 /*----------------mobilescreen---------------*/
 nav .fas{
     display: none;
@@ -153,6 +223,9 @@ nav .fas{
     }
     .contact-left{
         flex-basis: 100%;
+    }
+    .info-container p{
+        font-size: 15px;
     }
 }
 /*----------COPYRIGHTBAR---------------*/
